Fix Projects gap

--- a/style.css
+++ b/style.css
@@ -319,12 +319,15 @@ section{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   background-color: var(--bg-color);
   border: 2px solid var(--main-color);
   border-radius: 3rem;
   gap: 2rem;
-  padding: 5rem 2rem;
+  padding: 2rem 2rem;
   overflow: hidden;
   cursor: pointer;
   box-shadow: 0 0 5px var(--main-color);
